Libidn2 NEWS -- History of user-visible changes.                -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]


* Noteworthy changes in release 2.3.8 (2025-03-08) [stable]

** Unicode 15.1.0 table updates.
Now U+19DA is DISALLOWED again (see version 2.3.4 release notes).

** The release tarball is now reproducible.

** We publish a minimal source-only tarball generated by 'git archive'.

** The release tarball uses tar --format=ustar.

** The idn2 tool now binds the "gnulib" domain for translations.

** Update gnulib files and various build/maintenance fixes.

* Noteworthy changes in release 2.3.7 (2024-01-27) [stable]

** Really include tests/standalone.sh in tarball.

* Noteworthy changes in release 2.3.6 (2024-01-27) [stable]

** Bump libtool version numbers to reflect API/ABI addition.

** Include tests/standalone.sh in tarball.

* Noteworthy changes in release 2.3.5 (2024-01-27) [stable]

** Declaration of future API/ABI backwards compatibility stability.
GNU libc dlopen libidn2 and use the name libidn2.so.0 for this.  We
believe that it will be too challenging to ever do hard ABI break that
for normal libraries is justified to remove deprecated APIs.  Thus we
decided that we will support the current ABI for a long time.  Of
course, if really convincing arguments for doing a ABI break appears
in the future we may re-consider, but take this as a declaration of
intent of will and that future ABI breaks should be discussed and
co-ordinated with the glibc team first.

** Add public APIs for raw Punycode encoding/decoding.
Normal applications rarely need this, but it cleans up the code and
allow for external testing of the APIs, and resolve
<https://gitlab.com/libidn/libidn2/-/issues/80> due to earlier use of
weak symbols for internal symbols _idn2_punycode_encode and
_idn2_punycode_decode.  We will support these internal symbols for
backwards compatibility.  This allows a clean migration path for code
that is still using the internal names.