@@ -14,7 +14,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-GNULIB_REVISION=9297749090b01720888dceeb5f6dab3d52dcef40
+GNULIB_REVISION=b3518f60173c907453ee5c7d439f967342de6d0c
 
 # gnulib library name
 source_base=gl
@@ -24,6 +24,7 @@ gnulib_name=libgnu
 checkout_only_file=
 
 gnulib_modules="
+c-strncasecmp
 error
 getline
 getopt-gnu
@@ -34,22 +35,14 @@ inline
 lib-msvc-compat
 lib-symbol-versions
 lib-symbol-visibility
+libunistring-optional
+localcharset
 manywarnings
 progname
 readme-release
 stdio-h
 strchrnul
 strverscmp
-update-copyright
-valgrind-tests
-version-etc
-version-stamp
-"
-
-unistring_modules="
-c-strncasecmp
-libunistring-optional
-localcharset
 uniconv/u8-strconv-from-locale
 uniconv/u8-strconv-to-locale
 unictype/bidiclass-of
@@ -65,6 +58,10 @@ unistr/u32-cpy-alloc
 unistr/u32-strlen
 unistr/u32-to-u8
 unistr/u8-to-u32
+update-copyright
+valgrind-tests
+version-etc
+version-stamp
 "
 
 # Build prerequisites
@@ -93,12 +90,9 @@ ls po/*.po | sed 's|.*/||; s|\.po$||' > po/LINGUAS
 
 bootstrap_post_import_hook ()
 {
-  ${GNULIB_SRCDIR}/gnulib-tool --without-tests --libtool --macro-prefix=unistring --lgpl=3orGPLv2 --dir=. --local-dir=unistring --lib=libunistring --source-base=unistring --m4-base=unistring/m4 --doc-base=doc --aux-dir=build-aux --makefile-name=gnulib.mk --avoid=malloc-posix --avoid=malloca --import ${unistring_modules}
-
   echo Removing older autopoint/libtool M4 macros...
   for f in `cd m4 && ls *.m4`; do
       test -f gl/m4/$f && rm -fv m4/$f
-      test -f unistring/m4/$f && rm -fv m4/$f
   done
 
   if ! gtkdocize --copy; then
