@@ -31,7 +31,7 @@ local-checks-to-skip += sc_prohibit_gnu_make_extensions
 VC_LIST_ALWAYS_EXCLUDE_REGEX = ^(fuzz/.*.(in|repro)/.*)$$
 exclude_file_name_regexp--sc_program_name = ^(tests|examples)/.*\.c$$
 exclude_file_name_regexp--sc_prohibit_empty_lines_at_EOF = ^doc/reference/version.xml.in$$
-exclude_file_name_regexp--sc_trailing_blank = ^(m4/pkg.m4|gl/build-aux/gnu-web-doc-update.diff|gl/top/README-release.diff|tests/IdnaTest.(txt|inc))|(doc/gdoc)|(unistring/lib/uni.*diff)$$
+exclude_file_name_regexp--sc_trailing_blank = ^(m4/pkg.m4|gl/build-aux/gnu-web-doc-update.diff|gl/top/README-release.diff|tests/IdnaTest.(txt|inc))|(doc/gdoc)|(gl/lib/uni.*diff)$$
 exclude_file_name_regexp--sc_require_config_h = ^examples/.*\.c|^fuzz/main.c$$
 exclude_file_name_regexp--sc_require_config_h_first = ^examples/.*\.c|^fuzz/main.c$$
 exclude_file_name_regexp--sc_GPL_version = ^m4/ax_code_coverage.m4|m4/pkg.m4|COPYINGv2|lib/.*.(c|h|h.in)$$
