@@ -16,15 +16,13 @@
 AM_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib -I$(top_builddir)/lib -I$(srcdir) -I$(top_builddir)
 AM_CPPFLAGS += -I$(top_builddir)/gl -I$(top_srcdir)/gl
 AM_CPPFLAGS += -DSRCDIR=\"$(srcdir)\"
-AM_CPPFLAGS += -I$(top_srcdir)/unistring/ -I$(top_builddir)/unistring/
 AM_CFLAGS = $(WERROR_CFLAGS) $(WERROR_TESTS_CFLAGS) $(WARN_CFLAGS)
 AM_LDFLAGS = -no-install
 
-AM_VALGRINDFLAGS = --suppressions=$(top_srcdir)/unistring/libunistring.valgrind
+AM_VALGRINDFLAGS = --suppressions=$(top_srcdir)/gl/libunistring.valgrind
 
 LDADD = ../lib/libidn2.la
-LDADD += ../unistring/libunistring.la $(LTLIBUNISTRING)
-LDADD += ../gl/libgnu.la
+LDADD += ../gl/libgnu.la $(LTLIBUNISTRING)
 
 EXTRA_DIST = standalone.sh
 
